apps/base/qbittorrent/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent-route
  namespace: qbittorrent
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - qbittorrent.localho.st
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: qbittorrent
          port: 8085
